--- a/css/components/main_section.css
+++ b/css/components/main_section.css
@@ -1,12 +1,9 @@
 .main_section{
     box-sizing: border-box;
     background-color: #FF0;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    height: 100%;
+    height: 100vh;
     border-bottom: 5px solid #000;
-    padding-top: 76px;
-    padding-bottom: 56px;
+    padding-top: 100px;
 }
 
 .main_section .wrapper{
@@ -17,15 +14,15 @@
 }
 
 .main_section .main_title {
-    margin-bottom: 60px;
+    margin-bottom: 30px;
 }
 
 .main_section.-description .main_title {
     margin-bottom: 30px;
 }
 
-.main_section.-bgBlack {
-    background-color:  #000;
+.main_section.-bgPessoa {
+    height:  600px;
 }
 
 .main_section.-bdBlack {
@@ -47,8 +44,7 @@
 
 @media (max-height: 860px){
     .main_section{
-        padding-top: 40px;
-        padding-bottom: 30px;
+        padding-top: 60px;
     }
 
 }
