--- a/css/home/wrapper_theme.css
+++ b/css/home/wrapper_theme.css
@@ -21,7 +21,7 @@
         margin-right: 20px;
     }
 
-    .wrapperwrapper_theme_projects .project_card .icon{
+    .wrapper_theme .project_card .icon{
         width: 170px;
         height: 170px;
     }
